=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

Fixes
-----

- Fixed an issue that caused timestamp to not be formatted correctly.

2019/03/20 1.12.0
=================

Changes
-------

- Updated the license display to include the maximum number of nodes a license
  is valid for.

2019/02/21 1.11.4
=================

Fixes
-----

- Fixed an issue that caused the monitoring graph diagrams to be cut off.

2018/12/18 1.11.3
=================

Fixes
-----

- Fixed an issue that caused incorrectness in the navigation icons highlighting.

- Updated the license div to be more responsive

2018/11/15 1.11.2
=================

Changes
-------

- Changed the license information (ident) to be taken from the `sys.cluster.licence`
  attribute instead of the `license.ident` setting which is `@deprecated`.

- Addition of French language files and menu options.

2018/11/08 1.10.4
=================

Fixes
-----

- Fixed an issue that caused the cluster and node checks to not be refreshed
  when clicking on the ``refresh`` icon.

- Fixed an issue that caused the Twitter importer to redirect to ``/``
  instead of ``/help``.

- Fixed the navigation component to allow opening URLs in new tabs.

2018/06/29 1.10.3
=================

Fixes
-----

- Fixed an issue where the configuration file for plugins was not loaded when
  the UI was served from another location than ``/`` resulting in a blank
  browser canvas.

2018/05/29 1.10.2
=================

Fixes
-----

- Fixed an issue that caused the CrateDB process CPU calculation to be false.

2018/05/14 1.10.1
=================

Fixes
-----

 - Show column data types in table schema in upper case.

 - Fixed interface glitches that occurred on table tab when the last table was
   dropped.

2018/05/14 1.10.0
=================

Changes
-------

 - Added a new tab for views which lists available views and their properties.
